Cooking toolbar items no longer become ovals on small screens

--- a/Frontend/src/app/components/cooking-toolbar/cooking-toolbar.component.scss
+++ b/Frontend/src/app/components/cooking-toolbar/cooking-toolbar.component.scss
@@ -19,11 +19,17 @@ ion-icon {
   color: var(--ion-text-color);
 }
 
+.item-container {
+  display: flex;
+  overflow-x: auto;
+}
+
 .item {
   position: relative;
   user-select: none;
   cursor: pointer;
   margin: 0 10px;
+  flex-shrink: 0;
 }
 
 .letter {
